fix
changed heigh 100vh to min-height 100vh to stop the footer from overlapping

--- a/Customer-Frontend/src/pages/Auth.css
+++ b/Customer-Frontend/src/pages/Auth.css
@@ -1,7 +1,7 @@
 #auth-page {
     display: flex;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
